--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,12 @@
 
 * link:scanner/pl0-scanner.l[「PL/0'」用字句解析器(lex版) (scanner/pl0-scanner.l)]
 
+=== link:exp-parser[四則演算用構文解析器(exp-parserディレクトリ下)]
+後期の前半の授業(中間試験前)の構文解析析プログラムです。再帰下降型(LL)構文解析器
+と上向き構文解析(LALR)器があります。
+
+* link:exp-parser/README.adoc[構文解析器プログラムの説明 (exp-parser/README.adoc)]
+
 == 利用方法
 === Windows Subsystem for Linux (旧名 Bash on Windows on Ubuntsu) について
 Windows (64bit 版 Creators Update 以降)では、Windows Subsystem for Linux を利用すると
