--- a/README.adoc
+++ b/README.adoc
@@ -29,11 +29,11 @@
 
 * link:exp-parser/README.adoc[構文解析器プログラムの説明 (exp-parser/README.adoc)]
 
-=== link:exp-parser[PL/0'用構文解析器(pl0-compilerディレクトリ下)]
+=== link:exp-parser[PL/0'用構文解析器(pl0-compilerディレクトリ下)]
 後期の後半の授業(中間試験後)で説明する PL/0' 構文解析プログラムです。再帰下降型(LL)構文解析器
 です。
 
-* link:pl0-complier/README.adoc[構文解析器プログラムの説明 (pl0-compiler/README.adoc)]
+* link:pl0-compiler/README.adoc[構文解析器プログラムの説明 (pl0-compiler/README.adoc)]
 
 == 利用方法
 === Windows Subsystem for Linux (旧名 Bash on Windows on Ubuntsu) について
