記号表まで実装

--- a/pl0-compiler/README.adoc
+++ b/pl0-compiler/README.adoc
@@ -37,6 +37,23 @@ link:../sample/test03.pl0[PL/0'サンプルプログラム03:(../sample/test03.p
 関数呼び出しを使用している PL/0'のサンプルプログラムです。
 そのため、`pl0-ll-parser01`では、12行目で不適切なエラーを出力し、構文解析に失敗します。
 
+== PL/0'の構文解析器のプログラム(完成版)
+第25回(後期10回)で説明した PL/0'の構文解析器です。本プログラムは、記号表も実装しており、
+完全な構文解析器です。
+
+=== ファイルの説明
+link:pl0-ll-parser02.c[LL(1)構文解析器本体: (pl0-ll-parser01.c)]:: 本C言語プログラムが
+LL(1)再帰下降型構文解析器の本体となります。
+link:pl0-scanner.l[字句解析用サブルーチン(lex版): (pl0-scanner.l)]:: 本ソースプログラムを
+字句解析器自動生成ツール`lex`が処理し、自動的にC言語で書かれた字句解析サブルーチンが作成されます。
+link:symbol_table01.c[記号表: (symbol_table01.c)]:: 本ソースプログラムは
+記号表のサブルーチン集です。
+link:misc.c[エラー処理関数等の定義:(misc.c)]:: エラー出力を行う関数をこのファイルで定義しています。
+link:../sample/test02.pl0[PL/0'サンプルプログラム02:(../sample/test02.pl0)]:: 関数呼び出しを
+使用していないPL/0'のサンプルプログラムです。
+link:../sample/test03.pl0[PL/0'サンプルプログラム03:(../sample/test03.pl0)]:: 12行目で
+関数呼び出しを使用している PL/0'のサンプルプログラムです。
+
 === 実行方法と実行結果
 [source,bash]
 ----
