pl0-ll-compiler01 を追加

--- a/pl0-compiler/README.adoc
+++ b/pl0-compiler/README.adoc
@@ -31,28 +31,12 @@ LL(1)再帰下降型構文解析器の本体となります。**但し、T_IDは
 link:pl0-scanner.l[字句解析用サブルーチン(lex版): (pl0-scanner.l)]:: 本ソースプログラムを
 字句解析器自動生成ツール`lex`が処理し、自動的にC言語で書かれた字句解析サブルーチンが作成されます。
 link:misc.c[エラー処理関数等の定義:(misc.c)]:: エラー出力を行う関数をこのファイルで定義しています。
+link:misc.h[エラー処理関数の宣言:(misc.h)]:: misc.c 用のヘッダーファイルです。
 link:../sample/test02.pl0[PL/0'サンプルプログラム02:(../sample/test02.pl0)]:: 関数呼び出しを
 使用していないPL/0'のサンプルプログラムです。`pl0-ll-parser01`で構文解析に成功するはずです。
 link:../sample/test03.pl0[PL/0'サンプルプログラム03:(../sample/test03.pl0)]:: 12行目で
 関数呼び出しを使用している PL/0'のサンプルプログラムです。
 そのため、`pl0-ll-parser01`では、12行目で不適切なエラーを出力し、構文解析に失敗します。
-
-== PL/0'の構文解析器のプログラム(完成版)
-第25回(後期10回)で説明した PL/0'の構文解析器です。本プログラムは、記号表も実装しており、
-完全な構文解析器です。
-
-=== ファイルの説明
-link:pl0-ll-parser02.c[LL(1)構文解析器本体: (pl0-ll-parser01.c)]:: 本C言語プログラムが
-LL(1)再帰下降型構文解析器の本体となります。
-link:pl0-scanner.l[字句解析用サブルーチン(lex版): (pl0-scanner.l)]:: 本ソースプログラムを
-字句解析器自動生成ツール`lex`が処理し、自動的にC言語で書かれた字句解析サブルーチンが作成されます。
-link:symbol_table01.c[記号表: (symbol_table01.c)]:: 本ソースプログラムは
-記号表のサブルーチン集です。
-link:misc.c[エラー処理関数等の定義:(misc.c)]:: エラー出力を行う関数をこのファイルで定義しています。
-link:../sample/test02.pl0[PL/0'サンプルプログラム02:(../sample/test02.pl0)]:: 関数呼び出しを
-使用していないPL/0'のサンプルプログラムです。
-link:../sample/test03.pl0[PL/0'サンプルプログラム03:(../sample/test03.pl0)]:: 12行目で
-関数呼び出しを使用している PL/0'のサンプルプログラムです。
 
 === 実行方法と実行結果
 [source,bash]
@@ -73,10 +57,109 @@ $ ./pl0-ll-parser01 ../sample/test03.pl0
 Enter Program
 Enter Block
 ... 略 ...
-Enter Term_dash
-Exit  Term_dash
-Exit  Term
-Enter Expression_dash
-エラー: 12 行目 '('付近: 式がおかしい(E')
+Enter StatementList_dash
+Exit  StatementList_dash
+Exit  StatementList
+エラー: 12 行目 '('付近: endがない
+$
+----
+
+== PL/0'の構文解析器のプログラム(完成版)
+第25回(後期10回)で説明した PL/0'の構文解析器です。記号表を実装しているので
+完全な構文解析ができています。
+
+=== ファイルの説明
+link:pl0-ll-parser02.c[LL(1)構文解析器本体: (pl0-ll-parser02.c)]:: 本C言語プログラムが
+LL(1)再帰下降型構文解析器の本体となります。記号表によりT_IDが変数名/定数名/仮引数名/関数名を判断しています。
+link:pl0-scanner.l[字句解析用サブルーチン(lex版): (pl0-scanner.l)]:: 前述と同じです。
+link:misc.c[エラー処理関数等の定義:(misc.c)]:: 前述と同じです。
+link:misc.h[エラー処理関数の宣言:(misc.h)]:: 前述と同じです。
+link:symbol_table01.c[記号表および記号表用関数の定義:(symbol_table01.c)]:: 本プログラム内の関数で、
+記号表および記号表にアクセスする関数を定義しています。
+link:symbol_table01.h[記号表用関数の宣言:(symbol_table01.h)]:: symbol_table01.c
+用のヘッダーファイルです。
+
+=== 実行方法と実行結果
+[source,bash]
+----
+$ ./pl0-ll-parser02 ../sample/test07.pl0
+情報:  8 行目の y は  6 行目で宣言された 変数 です
+情報:  9 行目の b は  6 行目で宣言された 定数 です
+情報:  9 行目の y は  6 行目で宣言された 変数 です
+情報:  9 行目の x は  5 行目で宣言された 仮引数 です
+情報:  9 行目の z は  5 行目で宣言された 仮引数 です
+情報: 13 行目の b は  4 行目で宣言された 変数 です
+情報: 13 行目の c は  4 行目で宣言された 変数 です
+情報: 13 行目の d は  4 行目で宣言された 変数 です
+情報: 14 行目の a は  4 行目で宣言された 定数 です
+情報: 14 行目の b は  4 行目で宣言された 変数 です
+情報: 14 行目の func2 は  5 行目で宣言された 関数名 です
+情報: 14 行目の c は  4 行目で宣言された 変数 です
+情報: 14 行目の d は  4 行目で宣言された 変数 です
+情報: 14 行目の x は  3 行目で宣言された 仮引数 です
+情報: 14 行目の y は  3 行目で宣言された 仮引数 です
+情報: 20 行目の y は 18 行目で宣言された 変数 です
+情報: 21 行目の x は 17 行目で宣言された 仮引数 です
+情報: 21 行目の y は 18 行目で宣言された 変数 です
+情報: 25 行目の b は  1 行目で宣言された 変数 です
+情報: 25 行目の c は  1 行目で宣言された 変数 です
+情報: 26 行目の a は  1 行目で宣言された 定数 です
+情報: 26 行目の func1 は  3 行目で宣言された 関数名 です
+情報: 26 行目の b は  1 行目で宣言された 変数 です
+情報: 26 行目の c は  1 行目で宣言された 変数 です
+情報: 27 行目の func1 は  3 行目で宣言された 関数名 です
+情報: 27 行目の b は  1 行目で宣言された 変数 です
+情報: 27 行目の c は  1 行目で宣言された 変数 です
+情報: 27 行目の func3 は 17 行目で宣言された 関数名 です
+情報: 27 行目の a は  1 行目で宣言された 定数 です
+構文解析は全て成功
+$
+----
+
+== PL/0'のコンパイラプログラム(関数未対応版)
+第26回(後期11回)で説明した PL/0'のコンパイラです。if文やwhile文に対応していますが、
+関数(function)には対応していません。
+
+=== ファイルの説明
+link:pl0-ll-compiler01.c[LL(1)構文解析器本体: (pl0-ll-compiler01.c)]:: 本C言語プログラムが
+LL(1)再帰下降型構文解析を行い、コード生成部を呼び出しています。コンパイラ本体と言えます。
+link:pl0-scanner.l[字句解析用サブルーチン(lex版): (pl0-scanner.l)]:: 前述と同じです。
+link:misc.c[エラー処理関数等の定義:(misc.c)]:: 前述と同じです。
+link:misc.h[エラー処理関数の宣言:(misc.h)]:: 前述と同じです。
+link:codegen.c[アセンブリ言語コード生成部:(codegen.c)]::
+本プログラム内の関数で、アセンブリ言語のコードを生成しています。
+また、第27回(関数対応のコンパイラ)に向けて、関数の情報も扱えるように拡張されています。
+link:codegen.h[アセンブリ言語コード生成部の定義:(codegen.h)]:: `codegen.c`用のヘッダーファイルです。
+link:symbol_table02.c[記号表および記号表用関数の定義:(symbol_table02.c)]::
+本プログラム内の関数で、記号表および記号表にアクセスする関数を定義しています。
+`symbol_table01.c`と比較して、変数の格納アドレス/定数の値処理ができるように拡張されています。
+また、第27回(関数対応のコンパイラ)に向けて、関数の情報も扱えるように拡張されています。
+link:symbol_table02.h[記号表用関数の宣言:(symbol_table02.h)]:: `symbol_table02.c`
+用のヘッダーファイルです。
+
+=== 実行方法と実行結果
+[source,bash]
+----
+$ ./pl0-ll-compiler01 -h
+./pl0-ll-compiler01 [-h] [-n] [-o output_file] source_file
+$
+$ ./pl0-ll-compiler01 ../sample/test09.pl0
+MOVE 1,A
+PUSH A
+POP A
+PRINT A
+PRINTLN
+END
+$
+$ ./pl0-ll-compiler01 -n ../sample/test09.pl0
+   1 MOVE 1,A
+   2 PUSH A
+   3 POP A
+   4 PRINT A
+   5 PRINTLN
+   6 END
+$
+$ ./pl0-ll-compiler01 ../sample/test09.pl0 | ../vcpu/pl0dashvm.rb
+1
 $
 ----
